<resources>
    <string name="app_name">Inspiration</string>
    <string name="home">首页</string>
    <string name="color">色谱</string>
    <string name="inspiration">灵感</string>
    <string name="collection">收藏</string>
    <string name="game">游戏</string>
    <string name="example">渐变示例</string>
    <string name="example1">配色示例</string>
    <string name="jia">甲</string>
    <string name="color_card">色卡</string>
    <string name="login">登录</string>
    <string name="stu_id">学号</string>
    <string name="phone_num">手机号</string>
</resources>