<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#F2F3F5"
    android:fitsSystemWindows="true"
    tools:context=".view.activity.ColorDetailsActivity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        app:menu="@menu/introduce"
        android:layout_width="match_parent"
        android:layout_height="?actionBarSize" />

    <!--丐版小点-->
    <com.google.android.material.tabs.TabLayout
        android:id="@+id/tl_dot"
        android:layout_gravity="center"
        android:layout_width="wrap_content"
        android:layout_height="20dp"
        app:tabSelectedTextColor="@color/black"
        app:tabTextColor="@color/white"
        app:tabIndicatorHeight="0dp"
        app:tabRippleColor="@android:color/transparent"
        android:background="@android:color/transparent"
        app:tabTextAppearance="@style/TextAppearance.AppCompat.Medium"
        app:tabPadding="-20dp"
        >

        <com.google.android.material.tabs.TabItem
            tools:text="·"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <com.google.android.material.tabs.TabItem
            tools:text="·"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <com.google.android.material.tabs.TabItem
            tools:text="·"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <com.google.android.material.tabs.TabItem
            tools:text="·"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
        <com.google.android.material.tabs.TabItem
            tools:text="·"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

    </com.google.android.material.tabs.TabLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="20dp">

        <TextView
            android:id="@+id/tv_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:textColor="#333333"
            android:textSize="20sp"
            tools:text="青白" />

        <com.google.android.material.card.MaterialCardView
            android:id="@+id/mcv_item"
            android:layout_width="match_parent"
            android:layout_height="150dp"
            android:layout_marginBottom="20dp"
            tools:backgroundTint="#176F58">

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="20dp">

                <TextView
                    android:id="@+id/tv_num"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="end|center"
                    android:alpha="0.66"
                    android:textColor="#333333"
                    android:textSize="64sp"
                    android:text="@string/jia" />

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="bottom"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/tv_hex"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="5dp"
                        android:textColor="@color/white"
                        android:textSize="12sp"
                        tools:text="HEX #3A846B" />

                    <TextView
                        android:id="@+id/tv_rgb"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="5dp"
                        android:textColor="@color/white"
                        android:textSize="12sp"
                        tools:text="RGB 58, 132, 107" />

                    <TextView
                        android:id="@+id/tv_cmyk"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textColor="@color/white"
                        android:textSize="12sp"
                        tools:text="CMYK 56, 0, 19, 48" />

                </LinearLayout>
            </FrameLayout>

        </com.google.android.material.card.MaterialCardView>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:textColor="#333333"
            android:textSize="20sp"
            android:text="@string/example" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <kim.bifrost.cqupt.inspiration.view.widgets.ColorPaletteView
                android:id="@+id/cpv_1"
                android:layout_width="0dp"
                android:layout_height="100dp"
                android:layout_marginEnd="20dp"
                android:layout_weight="1" />

            <kim.bifrost.cqupt.inspiration.view.widgets.ColorPaletteView
                android:id="@+id/cpv_2"
                android:layout_width="0dp"
                android:layout_height="100dp"
                android:layout_marginEnd="20dp"
                android:layout_weight="1" />

            <kim.bifrost.cqupt.inspiration.view.widgets.ColorPaletteView
                android:id="@+id/cpv_3"
                android:layout_width="0dp"

                android:layout_height="100dp"
                android:layout_weight="1" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginVertical="20dp">

            <kim.bifrost.cqupt.inspiration.view.widgets.ColorPaletteView
                android:id="@+id/cpv_4"
                android:layout_width="0dp"
                android:layout_height="100dp"
                android:layout_marginEnd="20dp"
                android:layout_weight="1" />

            <kim.bifrost.cqupt.inspiration.view.widgets.ColorPaletteView
                android:id="@+id/cpv_5"
                android:layout_width="0dp"
                android:layout_height="100dp"
                android:layout_marginEnd="20dp"
                android:layout_weight="1" />

            <kim.bifrost.cqupt.inspiration.view.widgets.ColorPaletteView
                android:id="@+id/cpv_6"
                android:layout_width="0dp"
                android:layout_height="100dp"
                android:layout_weight="1" />
        </LinearLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:textColor="#333333"
            android:textSize="20sp"
            android:text="@string/example1" />

        <LinearLayout
            android:layout_marginBottom="20dp"
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:baselineAligned="false">

            <FrameLayout
                android:layout_marginEnd="20dp"
                android:layout_weight="1"
                android:layout_width="0dp"
                android:layout_height="54dp">
                <com.google.android.material.card.MaterialCardView
                    android:id="@+id/mcv_color_1"
                    android:backgroundTint="#1B5D3C"
                    android:layout_width="match_parent"
                    android:layout_height="36dp" />
                <TextView
                    android:id="@+id/tv_color_1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="bottom"
                    android:textSize="12sp"
                    android:textColor="#CC333333"
                    tools:text="#1B5D3C" />
            </FrameLayout>

            <FrameLayout
                android:layout_marginEnd="20dp"
                android:layout_weight="1"
                android:layout_width="0dp"
                android:layout_height="54dp">
                <com.google.android.material.card.MaterialCardView
                    android:id="@+id/mcv_color_2"
                    android:layout_width="match_parent"
                    android:layout_height="36dp" />
                <TextView
                    android:id="@+id/tv_color_2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="bottom"
                    android:textSize="12sp"
                    android:textColor="#CC333333"
                    tools:text="#1B5D3C" />
            </FrameLayout>

            <FrameLayout
                android:layout_marginEnd="20dp"
                android:layout_weight="1"
                android:layout_width="0dp"
                android:layout_height="54dp">
                <com.google.android.material.card.MaterialCardView
                    android:id="@+id/mcv_color_3"
                    android:layout_width="match_parent"
                    android:layout_height="36dp" />
                <TextView
                    android:id="@+id/tv_color_3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="bottom"
                    android:textSize="12sp"
                    android:textColor="#CC333333"
                    tools:text="#1B5D3C" />
            </FrameLayout>

        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:baselineAligned="false">

            <FrameLayout
                android:layout_marginEnd="20dp"
                android:layout_weight="1"
                android:layout_width="0dp"
                android:layout_height="54dp">
                <com.google.android.material.card.MaterialCardView
                    android:id="@+id/mcv_color_4"
                    android:backgroundTint="#1B5D3C"
                    android:layout_width="match_parent"
                    android:layout_height="36dp" />
                <TextView
                    android:id="@+id/tv_color_4"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="bottom"
                    android:textSize="12sp"
                    android:textColor="#CC333333"
                    tools:text="#1B5D3C" />
            </FrameLayout>

            <FrameLayout
                android:layout_marginEnd="20dp"
                android:layout_weight="1"
                android:layout_width="0dp"
                android:layout_height="54dp">
                <com.google.android.material.card.MaterialCardView
                    android:id="@+id/mcv_color_5"
                    android:layout_width="match_parent"
                    android:layout_height="36dp" />
                <TextView
                    android:id="@+id/tv_color_5"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="bottom"
                    android:textSize="12sp"
                    android:textColor="#CC333333"
                    tools:text="#1B5D3C" />
            </FrameLayout>

            <FrameLayout
                android:layout_marginEnd="20dp"
                android:layout_weight="1"
                android:layout_width="0dp"
                android:layout_height="54dp">
                <com.google.android.material.card.MaterialCardView
                    android:id="@+id/mcv_color_6"
                    android:layout_width="match_parent"
                    android:layout_height="36dp" />
                <TextView
                    android:id="@+id/tv_color_6"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="bottom"
                    android:textSize="12sp"
                    android:textColor="#CC333333"
                    tools:text="#1B5D3C" />
            </FrameLayout>

        </LinearLayout>

    </LinearLayout>

</LinearLayout>